--- a/src/mdx-content/blog/02-sample-blog.mdx
+++ b/src/mdx-content/blog/02-sample-blog.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: Example of a markdown file with code blocks and syntax highlighting
 ---
 
-A sample post with markdown.
+A sample post with markdown page 2.
 
 ## Inline Highlighting
 
